# 3DCity_Shadow

./: .gitignore  CMakeLists.txt  README.md  calculate_irradiance.py  config.json  irradiance_calculation_hourly.ipynb  log.md  point_grid.cpp  run_simulation.bat  run_simulation.sh
analysis/: 33.ipynb  37.ipynb  citysim_toDB.ipynb  compare.ipynb  db_tools.py  nta8800_toDB.ipynb  ours_toDB.ipynb
data/Delft/output_20240620_135136/: config.json
data/Delft/output_20240620_135136/shadow_result/: gmlids.csv
data/Delft/output_20240620_135432/: config.json
data/Delft/output_20240620_135432/shadow_result/: gmlids.csv
include/: Triangle.h  aabb.h  bvh.h  grid_point.h  hittable.h  hittable_list.h  vec3.h
src/: IO.cpp  IO.h  calculate_irradiance.py  point_grid.cpp  prepare_json.py  sample_pointGrid.cpp  sample_pointGrid.h  shadow_calculation.cpp  solar_pos.py  svf_calculation.cpp  test_calculate_irradiance.ipynb
